--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,19 +1,21 @@
-header {
+@use "../abstracts";
+
+.header {
   height: 586px;
   background-size: cover;
   background-position: center;
   position: relative;
 }
 
-header h1 {
+.header__title {
   padding-top: 150px;
   text-align: center;
-  color: white;
+  color: abstracts.$white;
   font-size: 2.5rem;
   letter-spacing: 5px;
 }
 
-header > img {
+.header__arrow {
   display: block;
   margin-top: 3rem;
   margin-inline: auto;
