--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -5,18 +5,28 @@
   background-size: cover;
   background-position: center;
   position: relative;
-}
 
-.header__title {
-  padding-top: 150px;
-  text-align: center;
-  color: abstracts.$white;
-  font-size: 2.5rem;
-  letter-spacing: 5px;
-}
+  &__nav {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 1.5rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-.header__arrow {
-  display: block;
-  margin-top: 3rem;
-  margin-inline: auto;
+  &__title {
+    padding-top: 150px;
+    text-align: center;
+    color: abstracts.$white;
+    font-size: 2.5rem;
+    letter-spacing: 5px;
+  }
+
+  &__arrow {
+    display: block;
+    margin-top: 3rem;
+    margin-inline: auto;
+  }
 }
