--- a/scss/layouts/_service.scss
+++ b/scss/layouts/_service.scss
@@ -4,13 +4,12 @@
   background-size: cover;
   padding: 2.5rem 2rem;
   text-align: center;
-}
+  &__title {
+    margin-top: 300px;
+    color: abstracts.$dark-desaturated-cyan;
+  }
 
-.service h2 {
-  margin-top: 300px;
-  color: abstracts.$dark-desaturated-cyan;
-}
-
-.service p {
-  color: abstracts.$dark-desaturated-cyan;
+  &__body {
+    color: abstracts.$dark-desaturated-cyan;
+  }
 }
