--- a/scss/layouts/_testimonial.scss
+++ b/scss/layouts/_testimonial.scss
@@ -3,12 +3,12 @@
 .testimonials {
   padding: 2.5rem 2rem;
   text-align: center;
-}
 
-.testimonials__title {
-  font-size: 1rem;
-  color: abstracts.$grayish-blue;
-  letter-spacing: 3px;
+  &__title {
+    font-size: 1rem;
+    color: abstracts.$grayish-blue;
+    letter-spacing: 3px;
+  }
 }
 
 .testimonial {
