--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -1,6 +1,8 @@
 @forward "header";
 @forward "content";
+@forward "services";
 @forward "service";
 @forward "testimonial";
+@forward "testimonials";
 @forward "gallery";
 @forward "footer";
