--- a/scss/layouts/_content.scss
+++ b/scss/layouts/_content.scss
@@ -6,11 +6,23 @@
 
   &__image {
     width: 100%;
+
+    &--transform {
+      content: url("../../images/mobile/image-transform.jpg");
+    }
+
+    &--stand-out {
+      content: url("../../images/mobile/image-stand-out.jpg");
+    }
   }
 
   &__details {
     padding: 2.5rem 2rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   &__title {
@@ -27,13 +39,62 @@
     margin-top: 2rem;
     margin-bottom: 1rem;
     color: abstracts.$black;
-    border-bottom: 2px solid black;
-    &--transform {
-      border-bottom: 2px solid #ffcf00;
+    position: relative;
+
+    &::before {
+      content: "";
+      text-align: center;
+      display: block;
+      position: absolute;
+      top: calc(100% - 7px);
+      left: -4px;
+      width: calc(100% + 8px);
+      height: 7px;
+      background-color: lightgray;
+      border-radius: 10px;
+      z-index: -1;
     }
 
-    &--standout {
-      border-bottom: 2px solid #fd7867;
+    &--transform::before {
+      background-color: #fdf1b7;
+    }
+
+    &--standout::before {
+      background-color: #fedbd3;
+    }
+
+    &--transform:hover::before {
+      background-color: #f5cc00;
+    }
+
+    &--standout:hover::before {
+      background-color: #f3796b;
+    }
+  }
+  @media (min-width: abstracts.$breakpoint-tablet) {
+    flex-direction: row;
+    &__image {
+      width: 50%;
+      &--transform {
+        content: url("../../images/desktop/image-transform.jpg");
+      }
+
+      &--stand-out {
+        content: url("../../images/desktop/image-stand-out.jpg");
+      }
+    }
+
+    &__details {
+      width: 50%;
+      text-align: left;
+      align-items: flex-start;
+      padding: 5rem 4rem;
+
+      > * {
+      }
+    }
+    &:nth-child(odd) {
+      flex-direction: row-reverse;
     }
   }
 }
