--- a/scss/layouts/_service.scss
+++ b/scss/layouts/_service.scss
@@ -17,23 +17,23 @@
 
   &--green {
     color: abstracts.$dark-desaturated-cyan;
-    background-image: url("../../images/mobile/image-graphic-design.jpg");
+    background-image: url(#{abstracts.$imagesPath}/mobile/image-graphic-design.jpg);
   }
 
   &--blue {
     color: abstracts.$dark-blue;
-    background-image: url("../../images/mobile/image-photography.jpg");
+    background-image: url(#{abstracts.$imagesPath}/mobile/image-photography.jpg);
   }
 
   @media (min-width: abstracts.$breakpoint-tablet) {
     background-position: center;
     width: 50%;
     &--green {
-      background-image: url("../../images/desktop/image-graphic-design.jpg");
+      background-image: url(#{abstracts.$imagesPath}/desktop/image-graphic-design.jpg);
     }
 
     &--blue {
-      background-image: url("../../images/desktop/image-photography.jpg");
+      background-image: url(#{abstracts.$imagesPath}/desktop/image-photography.jpg);
     }
   }
 }
